@@ -20,6 +20,11 @@ import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.context.ApplicationContext;
 
+
+/**
+ * -Djava.security.manager -Djav a.security.policy="/Library/Java/JavaVirtualMachines/JDK.JDK/Contents/Home/jre/lib/security/java.policy"
+ * @author SetsunaYang
+ */
 @SpringBootApplication
 public class SampleWebFreeMarkerApplication {
 
